# notify-family-budget

./: .gitignore  pyproject.toml  requirements.txt
src/python/: notify_budget.py
